# CodeReviewer

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
code_reviewer/: __init__.py  agent.py  cli.py  config.py  normalizer.py
code_reviewer/prompts/: __init__.py  review_cpp.md  review_cs.md  review_ts.md
code_reviewer/retrievers/: __init__.py  base.py  filesystem.py  gdrive.py  github.py  onedrive.py
docs/superpowers/plans/: 2026-05-31-code-reviewer.md  2026-06-07-filesystem-retriever.md
docs/superpowers/specs/: 2026-05-31-code-reviewer-design.md  2026-06-07-filesystem-retriever-design.md
tests/: __init__.py  test_agent.py  test_cli.py  test_normalizer.py
tests/retrievers/: __init__.py  test_base.py  test_filesystem.py  test_gdrive.py  test_github.py  test_onedrive.py
