[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-reviewer"
version = "0.1.0"
description = "Automatisk kodgranskning av rekryteringskandidater via Claude API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "requests>=2.31.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "msal>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
code-reviewer = "code_reviewer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["code_reviewer"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
